'Ajustado del width y height'

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             <p>Tengo conocimientos avanzados para la configuración pero utilizar la guía de Hostinger simplifica y
                 facilita bastante el trabajo.</p>
             <div class="stars-chevron">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
+                <div class="green-stars">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                </div>
                 <a href=""><i class="bi bi-chevron-right"></i></a>
             </div>
         </article>
@@ -34,11 +36,13 @@
             <p>Hostinger tiene una plataforma muy eficiente y práctica, un gran valor agregado para su precio y
                 servicio. 100% recomendado.</p>
             <div class="stars-chevron">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
+                <div class="green-stars">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                </div>
                 <a href=""><i class="bi bi-chevron-right"></i></a>
             </div>
         </article>
@@ -49,11 +53,13 @@
             </div>
             <p>Su panel de administración es muy intuitivo y el servicio a cliente es el mejor.</p>
             <div class="stars-chevron">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
+                <div class="green-stars">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                </div>
                 <a href=""><i class="bi bi-chevron-right"></i></a>
             </div>
         </article>
