'edicion en clase detalles'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section>
         <article>
-            <div>
+            <div class="header-review">
                 <i class="bi bi-star-fill"></i>
                 <h2>Trustpilot</h2>
             </div>
